--- a/rocket.css
+++ b/rocket.css
@@ -34,6 +34,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
+  height: 100vh;
 }
 
 #container {
