--- a/rocket.css
+++ b/rocket.css
@@ -81,11 +81,15 @@ body {
   left: 0;
   transform: translateY(-50%);
   z-index: 1;
+  animation: slide-back 0.2s;
+}
+
+#switch button:hover {
+  outline: 0.8rem solid var(--highligth-color);
 }
 
 .ligth #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
 }
 
 #switch span {
@@ -163,5 +167,24 @@ footer {
 
   .ligth {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/*Animation*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
